--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "portfolio",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "keywords": [],
   "author": "",
