--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "three": "^0.169.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "vite": "^5.3.3"
   }
 }
