--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/joy": "^5.0.0-beta.36",
     "cannon": "^0.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.169.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/three": "^0.181.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.1.1",
+    "typescript": "^5.4.2",
     "vite": "^5.3.3"
   }
 }
